trunk/Archive2/1c/dfe154815c8355/main.cpp
#include <functional>

void f(int, int, int){}

int main(){
    std::bind(f)(1,2,3);
}